<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/opcion1" android:title="@string/opcion1">
        <menu>
            <item android:id="@+id/opcion1_1" android:title="@string/opcion1_1"/>
            <item android:id="@+id/opcion1_2" android:title="@string/opcion1_2"/>
            <item android:id="@+id/opcion1_3" android:title="@string/opcion1_3"/>
        </menu>
    </item>
    <item android:id="@+id/opcion2" android:title="@string/opcion2">
        <menu>
            <item android:id="@+id/opcion2_1" android:title="@string/opcion2_1"/>
            <item android:id="@+id/opcion2_2" android:title="@string/opcion2_2"/>
            <item android:id="@+id/opcion2_3" android:title="@string/opcion2_3"/>
        </menu>
    </item>
    <item android:id="@+id/opcion3" android:title="@string/opcion3">
        <menu>
            <item android:id="@+id/opcion3_1" android:title="@string/opcion3_1"/>
            <item android:id="@+id/opcion3_2" android:title="@string/opcion3_2"/>
            <item android:id="@+id/opcion3_3" android:title="@string/opcion3_3"/>
        </menu>
    </item>
</menu>